fix: text output going out of bounds

--- a/js/style.css
+++ b/js/style.css
@@ -1,13 +1,15 @@
 textarea {
+    font-family: "Arial Nova", ui-sans-serif;
+
     display: flex;
     width: 550px;
-    height: 250px;
+    height: 400px;
     padding: 12px 20px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
     background-color: #f8f8f8;
-    font-size: 15px;
+    font-size: 18px;
     resize: none;
 }
 
@@ -48,13 +50,15 @@ textarea {
 }
 
 #TEST {
+    overflow: auto;
     width: 550px;
-    height: 250px;
+    height: 400px;
     white-space: pre-line;
     padding: 12px 20px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
     background-color: #f8f8f8;
-    font-size: 20px;
+    font-size: 18px;
+    font-family: "Arial Nova", ui-sans-serif;
 }
